--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -30,3 +30,8 @@ a {
     font-size: 36px;
     line-height: 80px;
 }
+.images_style {
+    width: 512px;
+    height: 900px;
+    border-radius: 10px;
+}
