--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -34,4 +34,9 @@ a {
     width: 512px;
     height: 900px;
     border-radius: 10px;
+    margin: 40px auto 40px; 
+    display: block;
+}
+.aligncenter {
+    text-align: center;
 }
