--- a/hw11/assets/styles/style.css
+++ b/hw11/assets/styles/style.css
@@ -1,8 +1,16 @@
-
+/*Не совсем понял что вы имеете в виду про шрифт. Надо было скачать его в
+fonts?? */
 
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap');
 html {
 font-family: 'Lato', sans-serif;
+}
+* {
+    margin: 0px
+}
+
+.bodystyle {
+    margin: 0px;
 }
 .header {
     background-color: black;
@@ -13,11 +21,9 @@ font-family: 'Lato', sans-serif;
 }
 .header__header {
     display: flex;
-    justify-content: space-between;
-    /* margin-left: 200px;
-    margin-right: 200px; */
-    padding: 20px;
-    width: 1440px;
+    justify-content: space-around;
+    align-items: center;    
+    max-width: 1140px;
     margin: auto;
 }
 
@@ -25,7 +31,7 @@ font-family: 'Lato', sans-serif;
     background-color: #F1E4E6;
     display: flex;
     align-items: center;
-    width: 1600px;
+    max-width: 1600px;
 }
 .img {
     width: 800px;
@@ -81,6 +87,7 @@ position: relative;
     transform: translate(-50%, -50%);
 }
 .section2-content__4 {
+    
     position: relative;
     grid-column-start: 1;
     grid-column-end: 4;
@@ -146,9 +153,9 @@ line-height: normal;
     gap: 30px;
 }
 .shadowBox {
-    background-color: #F8F8F8;
-    /* margin: 10px; */
-    padding: 16px;
+    background-color: #F8F8F8;    
+    padding: 23px;
+    max-width: 316px;
 }
 .section3-content__title {
     color: #000;
@@ -190,4 +197,57 @@ line-height: normal;
     border: 1px solid #FF6A6A;
     width: 214px;
     padding: 15px;
+}
+.image-txt-wrapper {
+    position: relative;
+}
+.image-bg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(33, 22, 22, 0.70);
+}
+.sect3__image-bg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color:rgba(110, 108, 103, 0.7);
+}
+
+@media screen and (max-width:767px) {
+
+    .header__header {
+        height: 74px;
+    }
+    .section1 {
+        .img {
+            width: 386px;
+        }
+    }
+    .title {
+        width: 283px;
+        font-size: 44px;
+    }
+    .categories {
+        max-width: 767px;
+        margin-left: 16px;
+        margin-right: 16px;
+        gap: 16px;
+    }
+    .section2-content__4 {
+        max-width: 734px;
+     }
+    .section3 {
+        max-width: 767px;
+    }
+    .section3-content {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        margin-left: 8px;
+        margin-right: 8px;
+    }
 }
