--- a/hw11/assets/styles/style.css
+++ b/hw11/assets/styles/style.css
@@ -2,9 +2,11 @@
 fonts?? */
 
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap');
+
 html {
-font-family: 'Lato', sans-serif;
+    font-family: 'Lato', sans-serif;
 }
+
 * {
     margin: 0px
 }
@@ -12,19 +14,23 @@ font-family: 'Lato', sans-serif;
 .bodystyle {
     margin: 0px;
 }
+
 .header {
-    background-color: black;
-    width: 2000;
+    background-color: #222;
+    /* width: 2000; */
 }
+
 .left {
     margin-left: 30px;
 }
+
 .header__header {
     display: flex;
-    justify-content: space-around;
-    align-items: center;    
-    max-width: 1140px;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 1024px;
     margin: auto;
+    height: 75px;
 }
 
 .section1 {
@@ -33,6 +39,7 @@ font-family: 'Lato', sans-serif;
     align-items: center;
     max-width: 1600px;
 }
+
 .img {
     width: 800px;
 }
@@ -42,24 +49,36 @@ font-family: 'Lato', sans-serif;
     border-left: 12px solid #F16D7F;
     padding-left: 16px;
 }
+
 .title {
     /* display: flex;
     align-items: center; */
     color: #222;
-font-family: Lato /*, sans-serif*/;
-font-size: 48px;
-font-style: normal;
-font-weight: 700;
-line-height: normal;
-margin: 0px;
-/* width: 370px; */
+    font-family: Lato
+        /*, sans-serif*/
+    ;
+    font-size: 48px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    margin: 0px;
+    /* width: 370px; */
 
 }
-.title__item {
+
+.title-item {
     display: inline;
     color: #222;
+    font-family: Lato;
+    font-size: 32px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+.title-item__end {
+    color: #F16D7F;
 font-family: Lato;
-font-size: 24px;
+font-size: 32px;
 font-style: normal;
 font-weight: 700;
 line-height: normal;
@@ -73,120 +92,135 @@ line-height: normal;
     gap: 30px;
     max-width: 1140px;
 }
+
 .section2-content {
-position: relative;
+    position: relative;
 }
+
 .center {
     margin-left: auto;
     margin-right: auto;
 }
+
 .txt {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
 }
+
 .section2-content__4 {
-    
+
     position: relative;
     grid-column-start: 1;
     grid-column-end: 4;
 }
 
-.sale-txt {   
-color: #FFF;
+.sale-txt {
+    color: #FFF;
 
-text-align: center;
-font-family: Lato;
-font-size: 16px;
-font-style: normal;
-font-weight: 400;
-line-height: normal;
-margin: 0px;
+    text-align: center;
+    font-family: Lato;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    margin: 0px;
 }
+
 .category-txt {
     color: #F16D7F;
-font-family: Lato;
-font-size: 24px;
-font-style: normal;
-font-weight: 700;
-line-height: normal;
-text-align: center;
-margin: 0px;
+    font-family: Lato;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    text-align: center;
+    margin: 0px;
 }
+
 .fetured {
-    /* display: flex;
-    justify-content: center;
-    align-items: center; */
-   
     margin-top: 100px;
     width: 336px;
 }
+
 .fetured-title {
     color: #222;
     text-align: center;
-font-family: Lato;
-font-size: 30px;
-font-style: normal;
-font-weight: 400;
-line-height: normal;
-margin: 0px;
+    font-family: Lato;
+    font-size: 30px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    margin: 0px;
 }
+
 .fetured-txt {
     color: #9F9F9F;
     text-align: center;
-font-family: Lato;
-font-size: 14px;
-font-style: normal;
-font-weight: 400;
-line-height: normal;
+    font-family: Lato;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
 }
+
 .section3 {
     max-width: 1140px;
     margin-top: 100px;
 }
+
 .section3-content {
 
     display: grid;
-    grid-template-columns: repeat(3,1fr);
+    grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(2, 1fr);
     gap: 30px;
 }
+
 .shadowBox {
-    background-color: #F8F8F8;    
+    display: flex;
+    gap: 16px;
+    flex-direction: column;
+    background-color: #F8F8F8;
     padding: 23px;
     max-width: 316px;
 }
+
 .section3-content__title {
     color: #000;
-font-family: Lato;
-font-size: 13px;
-font-style: normal;
-/* font-weight: 400; */
-line-height: normal;
+    font-family: Lato;
+    font-size: 13px;
+    font-style: normal;
+    /* font-weight: 400; */
+    line-height: normal;
 }
+
 .section3-txt {
     color: #5D5D5D;
-font-family: Lato;
-font-size: 14px;
-font-style: normal;
-font-weight: 300;
-line-height: normal;
+    font-family: Lato;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 300;
+    line-height: normal;
 }
+
 .cost {
     color: #F16D7F;
-font-family: Lato;
-font-size: 16px;
-font-style: normal;
-font-weight: 400;
-line-height: normal;
+    font-family: Lato;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
 }
+
 .button-wrapper {
     display: flex;
     justify-content: center;
     margin-top: 50px;
 
 }
+
 .button-txt {
     color: #F26376;
     font-family: Lato;
@@ -198,9 +232,11 @@ line-height: normal;
     width: 214px;
     padding: 15px;
 }
+
 .image-txt-wrapper {
     position: relative;
 }
+
 .image-bg {
     position: absolute;
     top: 0;
@@ -209,45 +245,58 @@ line-height: normal;
     height: 100%;
     background-color: rgba(33, 22, 22, 0.70);
 }
+
 .sect3__image-bg {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background-color:rgba(110, 108, 103, 0.7);
+    background-color: rgba(110, 108, 103, 0.7);
 }
 
-@media screen and (max-width:767px) {
+@media screen and (max-width:1439px) {
 
     .header__header {
-        height: 74px;
+        max-width: 710px;
+        /* height: 75px; */
     }
-    .section1 {
-        .img {
-            width: 386px;
-        }
+
+    .img {
+        max-width: 386px;
     }
+
     .title {
         width: 283px;
         font-size: 44px;
     }
+    .title-item {
+        font-size: 24px;
+    }
+    .title-item__end {
+        font-size: 24px;
+    }
+
     .categories {
-        max-width: 767px;
-        margin-left: 16px;
-        margin-right: 16px;
+        max-width: 734px;
+        /* margin-left: 16px;
+        margin-right: 16px; */
         gap: 16px;
     }
+
     .section2-content__4 {
         max-width: 734px;
-     }
+    }
+
     .section3 {
         max-width: 767px;
     }
+
     .section3-content {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         margin-left: 8px;
         margin-right: 8px;
     }
+
 }
