--- a/hw11/assets/styles/style.css
+++ b/hw11/assets/styles/style.css
@@ -1,5 +1,3 @@
-/*Не совсем понял что вы имеете в виду про шрифт. Надо было скачать его в
-fonts?? */
 
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap');
 
@@ -87,16 +85,29 @@ line-height: normal;
 .categories {
     margin-top: 100px;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    /* grid-template-rows: repeat(2, 1fr); */
+    grid-template-columns: repeat(3, 1fr);    
     gap: 30px;
-    max-width: 1140px;
+    position: relative;
+    
 }
 
 .section2-content {
     position: relative;
 }
-
+.section2-content::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(33, 22, 22, 0.7);
+}
+.section2-content img {
+    display: block;
+    width: 100%;
+    height: auto;
+}
 .center {
     margin-left: auto;
     margin-right: auto;
@@ -104,12 +115,15 @@ line-height: normal;
 
 .txt {
     position: absolute;
-    top: 50%;
+    top: 35%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%);
+    text-align: center;
+    font-family: Lato;
+    line-height: normal;
 }
 
-.section2-content__4 {
+.item-4 {
 
     position: relative;
     grid-column-start: 1;
@@ -118,30 +132,21 @@ line-height: normal;
 
 .sale-txt {
     color: #FFF;
-
-    text-align: center;
-    font-family: Lato;
     font-size: 16px;
-    font-style: normal;
     font-weight: 400;
-    line-height: normal;
-    margin: 0px;
+    white-space: nowrap;
 }
 
 .category-txt {
     color: #F16D7F;
-    font-family: Lato;
     font-size: 24px;
-    font-style: normal;
     font-weight: 700;
-    line-height: normal;
-    text-align: center;
-    margin: 0px;
+    white-space: nowrap;
 }
 
 .fetured {
     margin-top: 100px;
-    width: 336px;
+   /
 }
 
 .fetured-title {
@@ -169,40 +174,44 @@ line-height: normal;
     max-width: 1140px;
     margin-top: 100px;
 }
+.sect3-item {
+    background-color:  #F8F8F8;
+}
 
 .section3-content {
 
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(2, 1fr);
+   
     gap: 30px;
+    margin-bottom: 48px;
 }
 
 .shadowBox {
-    display: flex;
+    /*display: flex;
     gap: 16px;
     flex-direction: column;
     background-color: #F8F8F8;
     padding: 23px;
-    max-width: 316px;
-}
+    max-width: 316px;*/
+    font-family: Lato;
+    line-height: normal;
+    padding-left: 16px;
+} 
 
 .section3-content__title {
+    margin-top: 24px;
     color: #000;
-    font-family: Lato;
     font-size: 13px;
-    font-style: normal;
-    /* font-weight: 400; */
-    line-height: normal;
+    font-weight: 400;
 }
 
 .section3-txt {
+    margin-top: 16px;
     color: #5D5D5D;
-    font-family: Lato;
     font-size: 14px;
-    font-style: normal;
     font-weight: 300;
-    line-height: normal;
+    max-width: 315px;
 }
 
 .cost {
@@ -233,9 +242,10 @@ line-height: normal;
     padding: 15px;
 }
 
-.image-txt-wrapper {
+/* .image-txt-wrapper {
     position: relative;
 }
+
 
 .image-bg {
     position: absolute;
@@ -243,8 +253,8 @@ line-height: normal;
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(33, 22, 22, 0.70);
-}
+    background-color: rgba(33, 22, 22, 0.70); */
+/* } */
 
 .sect3__image-bg {
     position: absolute;
@@ -276,27 +286,89 @@ line-height: normal;
     .title-item__end {
         font-size: 24px;
     }
+    .center {
+        max-width: 100%;
+        margin-left: 16px;
+        margin-right: 16px;
+        gap: 16px;
+    }
 
     .categories {
-        max-width: 734px;
-        /* margin-left: 16px;
-        margin-right: 16px; */
-        gap: 16px;
+        gap: 20px;
+        margin-bottom: 110px;
     }
 
     .section2-content__4 {
         max-width: 734px;
     }
 
-    .section3 {
-        max-width: 767px;
+    .sect3-item img {
+        display: grid;
+        width: 100%;
+        height: auto;
     }
 
-    .section3-content {
-        display: grid;
+    .section3-content {       
         grid-template-columns: repeat(2, 1fr);
         margin-left: 8px;
         margin-right: 8px;
     }
 
+}
+@media screen and (max-width:767px) {
+    .header__header {
+        max-width: 320px;
+    }
+    .section1 {
+        height: 363px;
+    }
+
+    .need-hide {
+        display: none;
+        height: 363px;
+    }
+    .section__content {
+        max-width: 238px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    .title {
+        font-size: 38px;
+    }
+    .title-item {
+        font-size: 20px;
+    }
+    .title-item__end {
+        font-size: 20px;
+    }
+    .categories {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        margin-top: 64px;
+        margin-bottom: 64px;
+        /* max-width: 343px;   */
+        gap: 32px;
+    }
+    .section2 {
+        display: grid;
+        grid-template-columns: repeat(1,1fr);
+    }
+
+    .section3-content {       
+        grid-template-columns: repeat(1, 1fr);
+        margin-left: 8px;
+        margin-right: 8px;
+    }
+    .image-size {
+        max-width: 360px;
+    }
+    .item-4 {
+        grid-column: span 1;
+    }
+    .txt {
+        top: 45%;
+    }
+    .item4-txt {
+        top: 30%
+    }
 }
